Make script fetch website urls
Also make the script write the output to a file.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/JohnPhamous/birdy#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "config": "^1.30.0",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "twit": "^2.2.9"
   }
 }
