--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "prod": "NODE_ENV=prod node index.js",
+    "debug": "DEBUG='birdy' node index.js"
   },
   "repository": {
     "type": "git",
