adding proxy tests

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.2",
     "config": "^1.30.0",
     "debug": "^3.1.0",
+    "proxy-lists": "^1.14.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "twit": "^2.2.9"
