--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue": "^2.5.2"
+    "particles.js": "^2.0.0",
+    "vue": "^2.5.2",
+    "vue-loading-spinner": "^1.0.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
