--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "debug": "^3.1.0",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
-    "twit": "^2.2.9"
+    "twit": "^2.2.9",
+    "yargs": "^11.0.0"
   }
 }
