--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.1",
     "particles.js": "^2.0.0",
     "vue": "^2.5.2",
     "vue-loading-spinner": "^1.0.11"
