--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "global": "^4.3.2",
     "moment": "^2.22.1",
     "particles.js": "^2.0.0",
+    "snowball": "^0.3.1",
     "vue": "^2.5.2",
     "vue-loading-spinner": "^1.0.11",
     "vue2-google-maps": "^0.9.7"
